moved and consolidated .env file, updated moderator to users, added a route to register, rewrote python tests into mocha tests, started on email notifications
